# Lumiris

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc  Makefile  README.md  bunfig.toml  commitlint.config.mjs  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  knip.json  lighthouserc.cjs  package.json  prettier.config.mjs  stylelint.config.mjs  syncpack.config.mjs  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-commit
ansible/: .sops.yaml  README.md  ansible.cfg  bootstrap.yml  deploy.yml  rotate-secrets.yml  secrets.sops.example.yml
ansible/inventories/: production.example.yml
ansible/templates/: env.j2
apps/admin/: Dockerfile  env.ts  instrumentation.ts  next.config.mjs  package.json  tsconfig.json
apps/client/: Dockerfile  instrumentation.ts  next.config.mjs  package.json
apps/mobile/: Dockerfile  env.ts  instrumentation.ts  next.config.mjs  package.json
apps/mobile/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/src/: lib.rs  main.rs  scoring.rs
apps/site/: eslint.config.mjs  instrumentation.ts  package.json
apps/web/: Dockerfile  env.ts  mdx-components.tsx  next.config.mjs  package.json
bench/scenarios/: audit.js  browse.js  scoring.js
docs/: Business Model & Chiffrage.md  Cahier des charges.md  Stratégie & Marché.md
monitoring/prometheus/: prometheus.yml
scripts/: check-topology.mjs
(+375 files in other folders)
