[package]
name = "lumiris-mobile"
version = "0.1.0"
description = "Lumiris Mobile — native shell wrapping the Next.js consumer view"
authors = ["Lumiris"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lumiris_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
